test/param/loop/paramForLoopBoundSmall.good
paramForLoopBoundSmall.chpl:1: error: Range in param for loop is too small for this count
