test/param/loop/paramForLoopBoundSmall.chpl
for param i in 2..5#-5 {
    writeln(i);
}